--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Designer | ROHITH</title>
+    <title>Front End developer | ROHITH</title>
   </head>
   <body>
     <nav>
@@ -21,7 +21,6 @@
       <ul class="nav__links" id="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#service">Service</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact" class="btn">Contact</a></li>
       </ul>
@@ -33,10 +32,10 @@
       </div>
       <div class="header__content">
         <div>
-          <h1>Rohith<br />UI & UX<br />Designer</h1>
+          <h1>Rohith<br />Front-End<br />Developer</h1>
         </div>
         <p class="section__description">
-          I'm a dedicated web developer with a creative flair and a penchant for
+          I'm a dedicated Front End developer with a creative flair and a penchant for
           turning lines of code into captivating online experiences. My journey
           in the digital realm began years ago, and I've since honed my skills
           in front-end and back-end development.
@@ -56,8 +55,8 @@
       <div class="about__content">
         <h2 class="section__header">Bit About Me</h2>
         <p class="section__description">
-          A passionate web developer with a creative flair and a knack for
-          turning visions into reality. My journey in web development began with
+          A passionate Front End developer with a creative flair and a knack for
+          turning visions into reality. My journey in Front-End development began with
           a fascination for coding and design, and it has evolved into a career
           where I blend aesthetics with functionality. With a focus on user
           experience and a commitment to staying updated with the latest
@@ -66,60 +65,6 @@
         </p>
         <div class="about__btn">
           <button class="btn">Download CV</button>
-        </div>
-      </div>
-    </section>
-
-    <section class="section__container service__container" id="service">
-      <h2 class="section__header">My Best Services</h2>
-      <div class="service__grid">
-        <div class="service__card">
-          <span><i class="ri-window-fill"></i></span>
-          <h4>Website Design</h4>
-          <p>
-            We craft user-friendly interfaces that engage visitors and help you
-            achieve your online goals with minimum efforts.
-          </p>
-        </div>
-        <div class="service__card">
-          <span><i class="ri-store-line"></i></span>
-          <h4>E-commerce Solutions</h4>
-          <p>
-            We build secure, scalable, and user-centric online stores that
-            enhance the shopping experience and drive conversions.
-          </p>
-        </div>
-        <div class="service__card">
-          <span><i class="ri-smartphone-line"></i></span>
-          <h4>Mobile Development</h4>
-          <p>
-            From iOS to Android, we create apps that deliver seamless
-            performance and keep users coming back for more.
-          </p>
-        </div>
-        <div class="service__card">
-          <span><i class="ri-share-fill"></i></span>
-          <h4>Content Marketing</h4>
-          <p>
-            Our services include creating blog posts, videos, and social media
-            content that drives traffic and engagement.
-          </p>
-        </div>
-        <div class="service__card">
-          <span><i class="ri-seo-line"></i></span>
-          <h4>SEO</h4>
-          <p>
-            Our SEO strategies are tailored to your specific goals, helping you
-            reach your target audience and grow your online presence.
-          </p>
-        </div>
-        <div class="service__card">
-          <span><i class="ri-share-circle-line"></i></span>
-          <h4>Digital Marketing</h4>
-          <p>
-            From pay-per-click (PPC) advertising to social media marketing, we
-            ensure your brand stands out in the crowded digital landscape.
-          </p>
         </div>
       </div>
     </section>
