--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
         </div>
         <div class="portfolio__banner__card">
           <span><i class="ri-heart-fill"></i></span>
-          <h4>Mentoring</h4>
-          <p>Mentor for the college students</p>
+          <h4>Internship</h4>
+          <p>Completed the Internship in Jothi Software Pvt Ltd</p>
+          <p>Technologies: ReactJs and Ant Design Components</p>
+          <p>Duration :2 Month</p>
         </div>
       </div>
     </section>
